Updates from Overleaf

--- a/4º Período/Finanças II/Atividade.tex
+++ b/4º Período/Finanças II/Atividade.tex
@@ -55,8 +55,8 @@
     Érika Kaori Fuzisaka, \href{mailto:erikakf1@al.insper.edu.br}{erikakf1@al.insper.edu.br}\\
     Fabrizio Antonini Ripolli, \href{mailto:fabrizioar@al.insper.edu.br}{fabrizioar@al.insper.edu.br}\\
     Hicham Munir Tayfour, \href{mailto:hichamt@al.insper.edu.br}{hichamt@al.insper.edu.br}\\
-    Ricardo Henrico Amando, \href{mailto:}{}\\
-    Sarah de Araújo, \href{mailto:sarahans@al.insper.edu.br}{sarahans@al.insper.edu.br}\\
+    Ricardo Henrique Amando, \href{mailto:ricardoha3@al.insper.edu.br}{ricardoha3@al.insper.edu.br}\\
+    Sarah de Araújo Nascimento da Silva, \href{mailto:sarahans@al.insper.edu.br}{sarahans@al.insper.edu.br}\\
     4º Período - Economia B\\
     \vfill
     São Paulo\\
@@ -64,9 +64,10 @@
 \end{titlepage}
 
 \tableofcontents
-\thispagestyle{empty} % This command removes the page number from the table of contents page
+\thispagestyle{empty} % Este comando remove o número da página da página de índice
 \newpage
-\setcounter{page}{1} % This command sets the page number to start from this page
+\setcounter{page}{1} % Este comando define o número da página para começar a partir desta página
+
 \justify
 \onehalfspacing
 
