--- a/4º Período/Microeconomia III/Resolução Lista 4.tex
+++ b/4º Período/Microeconomia III/Resolução Lista 4.tex
@@ -81,48 +81,22 @@
 \section{\textbf{Questão 1}}
 \subsection{\textbf{Letra A}}
 
-\begin{table}[H]
-\centering
-\resizebox{\textwidth}{!}{
-\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
-\hline
-\multirow{2}{*}{Jogador 1} & \multicolumn{12}{c|}{Jogador 2} \\
-\cline{2-13}
- & (a,A,A) & (a,A,M) & (a,A,B) & (a,B,A) & (a,B,M) & (a,B,B) & (b,A,A) & (b,A,M) & (b,A,B) & (b,B,A) & (b,B,M) & (b,B,B) \\
-\hline
-(a,A) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) \\
-(a,B) & (0,0,7) & (0,0,7) & (0,0,7) & (5,1,3) & (5,1,3) & (5,1,3) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) \\
-(m,A) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) \\
-(m,B) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) \\
-(b,A) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) \\
-(b,B) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) \\
-\hline
-\end{tabular}
-}
+O conjunto de estratégias puras para cada jogador é :
 
-\caption{Matriz do jogador 3 quando joga a}
-\end{table}
+\textbf{Jogador 1:}
+\begin{itemize}
+    \item a ou b
+\end{itemize}
 
-\begin{table}[h!]
-\centering
-\resizebox{\textwidth}{!}{%
-\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
-\hline
-\multirow{2}{*}{Jogador 1} & \multicolumn{12}{c|}{Jogador 2} \\
-\cline{2-13}
- & (a,A,A) & (a,A,M) & (a,A,B) & (a,B,A) & (a,B,M) & (a,B,B) & (b,A,A) & (b,A,M) & (b,A,B) & (b,B,A) & (b,B,M) & (b,B,B) \\
-\hline
-(a,A) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) \\
-(a,B) & (0,0,7) & (0,0,7) & (0,0,7) & (5,1,3) & (5,1,3) & (5,1,3) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) \\
-(m,A) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) \\
-(m,B) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) \\
-(b,A) & (5,5,5) & (8,4,0) & (3,0,6) & (5,5,5) & (8,4,0) & (3,0,6) & (5,5,5) & (8,4,0) & (3,0,6) & (5,5,5) & (8,4,0) & (3,0,6) \\
-(b,B) & (5,5,5) & (8,4,0) & (3,0,6) & (5,5,5) & (8,4,0) & (3,0,6) & (5,5,5) & (8,4,0) & (3,0,6) & (5,5,5) & (8,4,0) & (3,0,6) \\
-\hline
-\end{tabular}
-}
-\caption{Matriz do jogador 3 quando joga b}
-\end{table}
+\textbf{Jogador 2:}
+\begin{itemize}
+    \item A ou B
+\end{itemize}
+
+\textbf{Jogador 3:} (Só se Jogador 1 escolher b)
+\begin{itemize}
+    \item a ou b
+\end{itemize}
 
 \subsection{\textbf{Letra B}}
 
@@ -133,14 +107,14 @@
 \hline
 \multirow{2}{*}{Jogador 1} & \multicolumn{12}{c|}{Jogador 2} \\
 \cline{2-13}
- & (a,A,A) & (a,A,M) & (a,A,B) & (a,B,A) & (a,B,M) & (a,B,B) & (b,A,A) & (b,A,M) & (b,A,B) & (b,B,A) & (b,B,M) & (b,B,B) \\
+ & (a;A;A) & (a;A;M) & (a;A;B) & (a;B;A) & (a;B;M) & (a;B;B) & (b;A;A) & (b;A;M) & (b;A;B) & (b;B;A) & (b;B;M) & (b;B;B) \\
 \hline
-(a,A) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) &\textbf{ (4,3,6)} & \textbf{(4,3,6)} & \textbf{(4,3,6)} & \textbf{(4,3,6)} & \textbf{(4,3,6)} & \textbf{(4,3,6)} \\
-(a,B) & (0,0,7) & (0,0,7) & (0,0,7) & (5,1,3) & (5,1,3) & (5,1,3) &\textbf{ (4,3,6)} & \textbf{(4,3,6)} & \textbf{(4,3,6)} & \textbf{(4,3,6)} & \textbf{(4,3,6)} & \textbf{(4,3,6)} \\
-(m,A) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) \\
-(m,B) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) \\
-(b,A) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) \\
-(b,B) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) & (0,5,0) \\
+(a;A) & (3;2;8) & (3;2;8) & (3;2;8) & (3;2;8) & (3;2;8) & (3;2;8) &\textbf{ (4;3;6)} & \textbf{(4;3;6)} & \textbf{(4;3;6)} & \textbf{(4;3;6)} & \textbf{(4;3;6)} & \textbf{(4;3;6)} \\
+(a;B) & (0;0;7) & (0;0;7) & (0;0;7) & (5;1;3) & (5;1;3) & (5;1;3) &\textbf{ (4;3;6)} & \textbf{(4;3;6)} & \textbf{(4;3;6)} & \textbf{(4;3;6)} & \textbf{(4;3;6)} & \textbf{(4;3;6)} \\
+(m;A) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) \\
+(m;B) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) \\
+(b;A) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) \\
+(b;B) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) & (0;5;0) \\
 \hline
 \end{tabular}
 }
@@ -155,14 +129,14 @@
 \hline
 \multirow{2}{*}{Jogador 1}& \multicolumn{12}{c|}{Jogador 2} \\
 \cline{2-13}
- & (a,A,A) & (a,A,M) & (a,A,B) & (a,B,A) & (a,B,M) & (a,B,B) & (b,A,A) & (b,A,M) & (b,A,B) & (b,B,A) & (b,B,M) & (b,B,B) \\
+ & (a;A;A) & (a;A;M) & (a;A;B) & (a;B;A) & (a;B;M) & (a;B;B) & (b;A;A) & (b;A;M) & (b;A;B) & (b;B;A) & (b;B;M) & (b;B;B) \\
 \hline
-(a,A) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (3,2,8) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) \\
-(a,B) & (0,0,7) & (0,0,7) & (0,0,7) & (5,1,3) & (5,1,3) & (5,1,3) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) \\
-(m,A) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) \\
-(m,B) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) & (2,5,6) \\
-(b,A) & \textbf{(5,5,5)} & (8,4,0) & (3,0,6) & \textbf{(5,5,5)} & (8,4,0) & (3,0,6) & \textbf{(5,5,5)} & (8,4,0) & (3,0,6) & \textbf{(5,5,5)} & (8,4,0) & (3,0,6) \\
-(b,B) &\textbf{ (5,5,5)} & (8,4,0) & (3,0,6) & \textbf{(5,5,5)} & (8,4,0) & (3,0,6) & \textbf{(5,5,5)} & (8,4,0) & (3,0,6) & \textbf{(5,5,5)} & (8,4,0) & (3,0,6) \\
+(a;A) & (3;2;8) & (3;2;8) & (3;2;8) & (3;2;8) & (3;2;8) & (3;2;8) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) \\
+(a;B) & (0;0;7) & (0;0;7) & (0;0;7) & (5;1;3) & (5;1;3) & (5;1;3) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) \\
+(m;A) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) \\
+(m;B) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) & (2;5;6) \\
+(b;A) & \textbf{(5;5;5)} & (8;4;0) & (3;0;6) & \textbf{(5;5;5)} & (8;4;0) & (3;0;6) & \textbf{(5;5;5)} & (8;4;0) & (3;0;6) & \textbf{(5;5;5)} & (8;4;0) & (3;0;6) \\
+(b;B) &\textbf{ (5;5;5)} & (8;4;0) & (3;0;6) & \textbf{(5;5;5)} & (8;4;0) & (3;0;6) & \textbf{(5;5;5)} & (8;4;0) & (3;0;6) & \textbf{(5;5;5)} & (8;4;0) & (3;0;6) \\
 \hline
 \end{tabular}
 }
@@ -175,21 +149,20 @@
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{Jogador 1}} & \multicolumn{6}{c|}{Jogador 2} \\ \cline{2-7} 
-\multicolumn{1}{|c|}{} & (b,A,A) & (b,A,M) & (b,A,B) & (b,B,A) & (b,B,M) & (b,B,B) \\ \hline
-(a,A) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) \\ \hline
-(a,B) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) & (4,3,6) \\ \hline
+\multicolumn{1}{|c|}{} & (b;A;A) & (b;A;M) & (b;A;B) & (b;B;A) & (b;B;M) & (b;B;B) \\ \hline
+(a;A) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) \\ \hline
+(a;B) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) & (4;3;6) \\ \hline
 \end{tabular}
 \caption{Matriz do jogador 3 quando joga a}
 \end{table}
-
 \begin{table}[H]
 \centering
 \begin{tabular}{|c|c|c|c|c|}
 \hline
  & \multicolumn{4}{c|}{Jogador 2} \\ \cline{2-5} 
-Jogador 1 & (a,A,A) & (a,B,A) & (b,A,A) & (b,B,A) \\ \hline
-(b,A) & (5,5,5) & (5,5,5) & (5,5,5) & (5,5,5) \\ \hline
-(b,B) & (5,5,5) & (5,5,5) & (5,5,5) & (5,5,5) \\ \hline
+Jogador 1 & (a;A;A) & (a;B;A) & (b;A;A) & (b;B;A) \\ \hline
+(b;A) & (5;5;5) & (5;5;5) & (5;5;5) & (5;5;5) \\ \hline
+(b;B) & (5;5;5) & (5;5;5) & (5;5;5) & (5;5;5) \\ \hline
 \end{tabular}
 \caption{Matriz do jogador 3 quando joga b}
 \end{table}
@@ -250,7 +223,7 @@ Substituindo \(q_2\) na segunda equação:
 \[2q_3 = \frac{2(a - c - q_1)}{3}\]
 \[q_3 = \frac{a - c - q_1}{3}\]
 
-Assim, o equilíbrio perfeito em subjogos para este jogo é dado por:
+O equilíbrio perfeito em subjogos nesse caso vai ser:
 \[(q_1, q_2, q_3) = \left(\frac{a - c}{5}, \frac{2(a - c)}{15}, \frac{2(a - c)}{15}\right)\]
 
 \subsection{\textbf{Letra D}}
